// Copyright (c) 2023 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate e2e tests,
// which are released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/e2e/blob/main/LICENSE

syntax = "proto3";

option java_package = "dev.restate.e2e.services.errors";
option java_outer_classname = "ErrorsProto";

import "google/protobuf/empty.proto";
import "dev/restate/ext.proto";
package errors;

service FailingService {
  option (dev.restate.ext.service_type) = KEYED;

  rpc TerminallyFailingCall (ErrorMessage) returns (google.protobuf.Empty);
  rpc CallTerminallyFailingCall (ErrorMessage) returns (ErrorMessage);
  rpc InvokeExternalAndHandleFailure(FailRequest) returns (ErrorMessage);
  rpc FailingCallWithEventualSuccess(Request) returns (AttemptResponse);
  rpc FailingSideEffectWithEventualSuccess (Request) returns (AttemptResponse);
  rpc TerminallyFailingSideEffect (ErrorMessage) returns (google.protobuf.Empty);
  rpc FailingSideEffectWithFiniteRetryPolicy(ErrorMessage) returns (google.protobuf.Empty);
}

message FailRequest {
  string key = 1 [(dev.restate.ext.field) = KEY];
}

message ErrorMessage {
  string key = 1 [(dev.restate.ext.field) = KEY];

  string error_message = 2;
}

message Request {
  string key = 1 [(dev.restate.ext.field)= KEY];
}

message AttemptResponse {
  int32 attempts = 1;
}