syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.restate.e2e.functions.errors";
option java_outer_classname = "ErrorsProto";

import "google/protobuf/empty.proto";
package errors;

service FailingService {
  rpc Fail (ErrorMessage) returns (google.protobuf.Empty);
  rpc FailAndHandle (ErrorMessage) returns (ErrorMessage);
  rpc InvokeExternalAndHandleFailure(google.protobuf.Empty) returns (ErrorMessage);
}

message ErrorMessage {
  string error_message = 1;
}